--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -290,7 +290,7 @@ span.fourth-text p {
 
     .hero-text img {
         text-align: center;
-        margin-top: 50px;
+        /* margin-top: 50px; */
         width: 260px;
     }
 
